add category and update proto
